# sports-manager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
cmake/: submodule.cmake
src/: CMakeLists.txt  main.cpp
